--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,6 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+
+# On sauvegarde pas la save !!!
+save.json
